# illbiometrics

./: .env.example  .gitignore  README.md  TODO  justfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: copilot-setup-steps.yml
app/: analytics.py  auth.py  config.py  garmin_analytics.py  garmin_client.py  main.py  oura_client.py
app/templates/: dashboard.html
docs/pitch/: pitch.md
playground/: get_playground_user_data.py  playground.ipynb
tests/: conftest.py  test_analytics.py  test_garmin.py  test_garmin_analytics.py  test_multitenancy.py
tests/fixtures/: .gitkeep  garmin_sleep_2025-11-01_2025-11-28.json  garmin_stress_2025-11-01_2025-11-28.json  usercollection_heartrate_2025-10-31_2025-11-29.json  usercollection_heartrate_2025-10-31_2025-11-30.json  usercollection_heartrate_2025-11-01_2025-12-01.json  usercollection_heartrate_2025-11-06_2025-12-04.json  usercollection_sleep.json  usercollection_sleep_2025-10-31_2025-11-29.json  usercollection_sleep_2025-10-31_2025-11-30.json  usercollection_sleep_2025-11-01_2025-12-01.json  usercollection_sleep_2025-11-06_2025-12-04.json
