[project]
name = "illbiometrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
]
